--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -21,6 +21,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    height: 200px;
+    width: 400px;
 }
 
 h1 {
